projects/packages/my-jetpack/_inc/components/product-detail-card/style.module.scss
.card {
	background-color: var( --jp-white );
	height: 100%;
	padding: calc( var( --spacing-base ) * 8 );
	position: relative;
}

.container {
	height: 100%;
	display: flex;
	flex-direction: column;
}

.card-header {
	display: flex;
	align-items: center;
	background: var( --jp-black );
	color: var( --jp-white );
	border-radius: var( --jp-border-radius ) var( --jp-border-radius ) 0 0;
	padding: 0 var( --spacing-base );
	height: calc( var( --spacing-base ) * 4 );
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
}

.product-bundle-icon {
	fill: var( --jp-white );
	margin-right: var( --spacing-base );
}

.product-bundle-icons,
.product-icon {
	display: flex;
	align-items: center;
	height: calc( var( --spacing-base ) * 4 );
	margin-bottom: calc( var( --spacing-base ) * 4 );
}

.plus-icon {
	fill: rgb(140, 143, 148);
	height: 24px;
	line-height: 24px;
}

.product-has-required-plan {
	display: flex;
	justify-content: center;
	align-items: center;

	svg {
		margin-right: var( --spacing-base );
	}
}

.checkout-button {
	display: inline-block;
	padding: 0.5em 2em;
	text-align: center;
	width: 100%;
	min-height: 42px;

	.components-spinner {
		margin: 0;
	}

	// Overwrite component default text wrapping. Label should be able to wrap
	// on a new line to be fully visible on mobile devices.
	&:global(.components-button.is-primary) {
		height: auto;
		white-space: normal;
	}
	
	&:global(.is-secondary):hover:not(:disabled) {
		background-color: var( --jp-black );
		color: var( --jp-white );
	}

}

.free-product-checkout-button {
	margin-top: calc( var( --spacing-base ) * 2 );
}

.features {
	margin: 0;
	padding: 0;
	flex-grow: 1;
	margin-bottom: calc( var( --spacing-base ) * 2 );

	li {
		list-style: none;
		display: flex;
		align-items: start;
		margin-bottom: var( --spacing-base );
	}

	svg {
		fill: var( --jp-green-primary);
		margin-right: var( --spacing-base );
		flex-shrink: 0;
	}
}

.disclaimers {
	margin-top: calc( var( --spacing-base ) * 2 );
}

.price-container {
	display: flex;
	flex-wrap: wrap;
	align-items: flex-end;
	color: var( --jp-text-color);
}

.price {
	position: relative;

	&:first-child {
		margin-right: calc( var( --spacing-base ) * 2 );
	}

	&.is-old {
		color: var( --jp-gray-20);

		&:after {
			content: " ";
			display: block;
			width: 100%;
			height: 3px;
			background: var( --jp-red);
			border-radius: var( --jp-border-radius );
			position: absolute;
			top: 50%;
			margin-top: -2px;
			pointer-events: none;
		}
	}
}

.price-description {
	color: var( --jp-gray-40 );
	margin-bottom: calc( var( --spacing-base ) * 3 );
}

.supporting-info {
	margin-top: calc( var( --spacing-base ) * 5 );
}

